--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "2.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^6.2.6",
     "gsap": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
